/*
 *  UCF COP3330 Summer 2021 Application Assignment 1 Solution
 *  Copyright 2021 Adam Farrow
 */
package baseline;

public class RecordItem {
    //defines instance variables
    public RecordItem(String title, String description, String dueDate, boolean complete, boolean inView) {
        // sets instance variables to the method arguments
    }
    public boolean getInView(){
        //returns inView
    }
    public void setInView(boolean inView) {
        //sets the value of inView
    }

    public boolean getComplete(){
        //returns complete
    }
    public void setComplete(boolean complete) {
        //sets complete
    }

    public void setTitle(String title){
        //sets the title
    }
    public void setDescription(String description){
        //sets the description
    }
    public void setDueDate(String dueDate){
        //sets the due date
    }
    public String getTitle() {
        //returns the title
    }

    public String getDescription() {
        //returns the description
    }
    public String getDueDate(){
        //returns the due date
    }
}
