@startuml
Application o-- ApplicationController
ApplicationController o-- RecordItem
class Application{
+start(Stage stage)
+main(String[] args)
}
class ApplicationController{
private int listInView
+showListSelected(int list,List<ArrayList<RecordItem>> lists)
+addItemToList(String title, String description, String dueDate,List<ArrayList<RecordItem>> lists)
+editSelectedItem(int itemNo, String change, List<ArrayList<RecordItem>> lists)
+completeItem(List<ArrayList<RecordItem>> lists, int itemNo)
+removeSelectedItem(int itemNo, List<ArrayList<RecordItem>> lists)
+addList(List<ArrayList<RecordItem>> lists)
+deleteSelectedList(List<ArrayList<RecordItem>> lists,int listNo)
+loadList(List<ArrayList<RecordItem>> lists, String path)
+saveList(List<ArrayList<RecordItem>> lists, String path, String fileName)
+showComplete(List<ArrayList<RecordItem>> lists)
+showAll(List<ArrayList<RecordItem>> lists)
+showIncomplete(List<ArrayList<RecordItem>> lists)
+initialize()

}
class RecordItem{
 private String title;
 private String description;
 private String dueDate;
 private boolean complete;
 private boolean inView;
+RecordItem(String title, String description, String dueDate, boolean complete, boolean inView)
+getTitle()
+setTitle(String title)
+getDescription()
+setDescription(String description)
+setDueDate(String dueDate)
+getDueDate()
+setComplete(boolean complete)
+getComplete()
+setInView(boolean inView)
+getInView()
}
@enduml